--- a/pcap_datalink.3pcap.in
+++ b/pcap_datalink.3pcap.in
@@ -1,4 +1,4 @@
-.\" @(#) $Header: /tcpdump/master/libpcap/Attic/pcap_list_datalinks.3pcap,v 1.4 2008-05-26 19:58:06 guy Exp $
+.\" @(#) $Header: /tcpdump/master/libpcap/pcap_datalink.3pcap.in,v 1.1 2008-10-21 07:33:02 guy Exp $
 .\"
 .\" Copyright (c) 1994, 1996, 1997
 .\"	The Regents of the University of California.  All rights reserved.
@@ -19,10 +19,9 @@
 .\" WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
 .\" MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 .\"
-.TH PCAP_LIST_DATALINKS 3PCAP "5 April 2008"
+.TH PCAP_DATALINK 3PCAP "5 April 2008"
 .SH NAME
-pcap_list_datalinks \- get a list of link-layer header types supported
-by a capture device
+pcap_datalink \- get the link-layer header type
 .SH SYNOPSIS
 .nf
 .ft B
@@ -30,29 +29,13 @@ by a capture device
 .ft
 .LP
 .ft B
-int pcap_list_datalinks(pcap_t *p, int **dlt_buf);
+int pcap_datalink(pcap_t *p);
 .ft
 .fi
 .SH DESCRIPTION
-.B pcap_list_datalinks()
-is used to get a list of the supported data link types of the interface
-associated with the pcap descriptor.
-.B pcap_list_datalinks()
-allocates an array to hold the list and sets
-.IR *dlt_buf .
-The caller is responsible for freeing the array with
-.BR pcap_free_datalinks (3PCAP).
-.SH RETURN VALUE
-.B pcap_list_datalinks()
-returns the number of data link types in the array on success and \-1
-on failure.
-If \-1 is returned,
-.B pcap_geterr()
-or
-.B pcap_perror()
-may be called with
-.I p
-as an argument to fetch or display the error text.
+.B pcap_datalink()
+returns the link layer type for the live capture or ``savefile''
+specified by
+.IR p .
 .SH SEE ALSO
-pcap(3PCAP), pcap_geterr(3PCAP), pcap_free_datalinks(3PCAP),
-pcap-linktype(4)
+pcap(3PCAP), pcap-linktype(@MAN_MISC_INFO@)
