Don't hard-wire section 4 as the section for the pcap-filter and pcap-linktype man pages; it should be section 7 for UN*Xes using the V7/BSD conventions (this includes *BSD, Linux, and Mac OS X), and section 5 for UN*Xes using the System V conventions (this includes Solaris and HP-UX, and possibly AIX).

--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.138.2.19 2008-09-23 18:06:01 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.138.2.20 2008-10-21 07:44:56 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.138.2.19 $)
+AC_REVISION($Revision: 1.138.2.20 $)
 AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
@@ -866,7 +866,14 @@ if test "$V_LEX" = lex ; then
 	fi
 fi
 
+#
+# Assume a.out/ELF convention for shared library names (".so"), and
+# V7/BSD convention for man pages (file formats in section 5,
+# miscellaneous info in section 7).
+#
 DYEXT="so"
+MAN_FILE_FORMATS=5
+MAN_MISC_INFO=7
 case "$host_os" in
 
 aix*)
@@ -876,16 +883,40 @@ aix*)
 	# We need "-lodm" and "-lcfg", as libpcap requires them on
 	# AIX.
 	DEPLIBS="-lodm -lcfg"
+
+	#
+	# Assume System V conventions for man pages.
+	#
+	MAN_FILE_FORMATS=4
+	MAN_MISC_INFO=5
 	;;
 
 hpux9*)
 	AC_DEFINE(HAVE_HPUX9,1,[on HP-UX 9.x])
+
+	#
+	# Use System V conventions for man pages.
+	#
+	MAN_FILE_FORMATS=4
+	MAN_MISC_INFO=5
 	;;
 
 hpux10.0*)
+
+	#
+	# Use System V conventions for man pages.
+	#
+	MAN_FILE_FORMATS=4
+	MAN_MISC_INFO=5
 	;;
 
 hpux10.1*)
+
+	#
+	# Use System V conventions for man pages.
+	#
+	MAN_FILE_FORMATS=4
+	MAN_MISC_INFO=5
 	;;
 
 hpux*)
@@ -896,6 +927,12 @@ hpux*)
 	dnl for 32-bit PA-RISC, but should be left as "so" for
 	dnl 64-bit PA-RISC or, I suspect, IA-64.
 	AC_DEFINE(HAVE_HPUX10_20_OR_LATER,1,[on HP-UX 10.20 or later])
+
+	#
+	# Use System V conventions for man pages.
+	#
+	MAN_FILE_FORMATS=4
+	MAN_MISC_INFO=5
 	;;
 
 sinix*)
@@ -914,6 +951,12 @@ sinix*)
 
 solaris*)
 	AC_DEFINE(HAVE_SOLARIS,1,[On solaris])
+
+	#
+	# Use System V conventions for man pages.
+	#
+	MAN_FILE_FORMATS=4
+	MAN_MISC_INFO=5
 	;;
 
 darwin*)
@@ -960,6 +1003,8 @@ AC_SUBST(SSRC)
 AC_SUBST(DYEXT)
 AC_SUBST(DAGLIBS)
 AC_SUBST(DEPLIBS)
+AC_SUBST(MAN_FILE_FORMATS)
+AC_SUBST(MAN_MISC_INFO)
 
 dnl check for USB sniffing support
 AC_MSG_CHECKING(for USB sniffing support)
@@ -1005,7 +1050,9 @@ AC_PROG_INSTALL
 
 AC_CONFIG_HEADER(config.h)
 
-AC_OUTPUT(Makefile)
+AC_OUTPUT(Makefile pcap-filter.manmisc pcap-linktype.manmisc pcap.3pcap
+	pcap_compile.3pcap pcap_datalink.3pcap pcap_list_datalinks.3pcap
+	pcap_open_dead.3pcap)
 
 if test -f .devel ; then
 	make depend
