Add suffixes for shared libraries, and the generated pcap-config file, to the .cvsignore list.

--- a/.cvsignore
+++ b/.cvsignore
@@ -1,8 +1,12 @@
+*.so
+*.sl
+*.dylib
 config.log
 config.cache
 config.status
 config.h
 .devel
+pcap-config
 pcap-filter.manmisc
 pcap-linktype.manmisc
 pcap.3pcap
