--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.158 2008-10-21 07:33:01 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.159 2008-10-23 05:56:59 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.158 $)
+AC_REVISION($Revision: 1.159 $)
 AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
@@ -1050,9 +1050,11 @@ AC_PROG_INSTALL
 
 AC_CONFIG_HEADER(config.h)
 
-AC_OUTPUT(Makefile pcap-filter.manmisc pcap-linktype.manmisc pcap.3pcap
-	pcap_compile.3pcap pcap_datalink.3pcap pcap_list_datalinks.3pcap
-	pcap_open_dead.3pcap)
+AC_OUTPUT(Makefile pcap-filter.manmisc pcap-linktype.manmisc
+	pcap-savefile.manfile pcap.3pcap pcap_compile.3pcap
+	pcap_datalink.3pcap pcap_dump_open.3pcap
+	pcap_list_datalinks.3pcap pcap_open_dead.3pcap
+	pcap_open_offline.3pcap)
 
 if test -f .devel ; then
 	make depend
