--- a/pcap_dump_open.3pcap.in
+++ b/pcap_dump_open.3pcap.in
@@ -1,4 +1,4 @@
-.\" @(#) $Header: /tcpdump/master/libpcap/Attic/pcap_open_offline.3pcap,v 1.1.2.3 2008-04-06 03:21:56 guy Exp $
+.\" @(#) $Header: /tcpdump/master/libpcap/pcap_dump_open.3pcap.in,v 1.1.2.2 2008-10-23 05:59:43 guy Exp $
 .\"
 .\" Copyright (c) 1994, 1996, 1997
 .\"	The Regents of the University of California.  All rights reserved.
@@ -19,60 +19,69 @@
 .\" WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
 .\" MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 .\"
-.TH PCAP_OPEN_OFFLINE 3PCAP "5 April 2008"
+.TH PCAP_DUMP_OPEN 3PCAP "5 April 2008"
 .SH NAME
-pcap_open_offline, pcap_fopen_offline \- open a saved capture file for reading
+pcap_dump_open, pcap_dump_fopen \- open a file to which to write packets
 .SH SYNOPSIS
 .nf
 .ft B
 #include <pcap/pcap.h>
 .ft
-.LP
 .nf
-.ft B
-char errbuf[PCAP_ERRBUF_SIZE];
-.ft
 .LP
 .ft B
-pcap_t *pcap_open_offline(const char *fname, char *errbuf);
-pcap_t *pcap_fopen_offline(FILE *fp, char *errbuf);
+pcap_dumper_t *pcap_dump_open(pcap_t *p, const char *fname);
+pcap_dumper_t *pcap_dump_fopen(pcap_t *p, FILE *fp);
 .ft
 .fi
 .SH DESCRIPTION
-.B pcap_open_offline()
-is called to open a ``savefile'' for reading.
-.PP
+.B pcap_dump_open()
+is called to open a ``savefile'' for writing.
 .I fname
-specifies the name of the file to open. The file has
+specifies the name of the file to open. The file will have
 the same format as those used by
 .BR tcpdump (1)
 and
 .BR tcpslice (1).
-The name "-" in a synonym for
-.BR stdin .
+The name "-" in a synonym
+for
+.BR stdout .
 .PP
-Alternatively, you may call
-.B pcap_fopen_offline()
-to read dumped data from an existing open stream
+.B pcap_dump_fopen()
+is called to write data to an existing open stream
 .IR fp .
 Note that on Windows, that stream should be opened in binary mode.
-.SH RETURN VALUE
-.B pcap_open_offline()
+.PP
+.I p
+is a capture or ``savefile'' handle returned by an earlier call to
+.B pcap_create()
+and activated by an earlier call to
+.BR pcap_activate() ,
+or returned by an earlier call to
+.BR pcap_open_offline() ,
+.BR pcap_open_live() ,
+or
+.BR pcap_open_dead() .
+The link-layer type and snapshot length from
+.I p
+are used as the link-layer type and snapshot length of the output file.
+.SH RETURN VALUES
+A pointer to a
+.B pcap_dumper_t
+structure to use in subsequent
+.B pcap_dump()
 and
-.B pcap_fopen_offline()
-return a
-.I pcap_t *
-on success and
+.B pcap_dump_close()
+calls is returned on success.
 .B NULL
-on failure.
+is returned on failure.
 If
 .B NULL
 is returned,
-.I errbuf
-is filled in with an appropriate error message.
-.I errbuf
-is assumed to be able to hold at least
-.B PCAP_ERRBUF_SIZE
-chars.
+.B pcap_geterr(\fIp\fB)
+can be used to get the error text.
 .SH SEE ALSO
-pcap(3PCAP)
+pcap(3PCAP), pcap_create(3PCAP), pcap_activate(3PCAP),
+pcap_open_offline(3PCAP), pcap_open_live(3PCAP), pcap_open_dead(3PCAP),
+pcap_dump(3PCAP), pcap_dump_close(3PCAP), pcap_geterr(3PCAP),
+pcap-savefile(@MAN_FILE_FORMATS@)
