--- a/Makefile.in
+++ b/Makefile.in
@@ -17,7 +17,7 @@
 #  WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
 #  MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 #
-# @(#) $Header: /tcpdump/master/libpcap/Makefile.in,v 1.108.2.26 2008-10-23 05:59:43 guy Exp $ (LBL)
+# @(#) $Header: /tcpdump/master/libpcap/Makefile.in,v 1.108.2.27 2008-10-23 06:28:21 guy Exp $ (LBL)
 
 #
 # Various configurable paths (remember to edit Makefile.in, not Makefile)
@@ -342,7 +342,7 @@ libpcap.dylib: $(OBJ)
 	$(CC) -dynamiclib -undefined error -o libpcap.`cat VERSION`.dylib $(OBJ) \
 		-install_name $(libdir)/libpcap.A.dylib \
 		-compatibility_version 1 \
-		-current_version `cat VERSION | sed 's/[^0-9.][^0-9.]*.*$$//'`
+		-current_version `cat VERSION | sed 's/[^0-9.].*$$//'`
 
 scanner.c: $(srcdir)/scanner.l
 	@rm -f $@
