More files to ignore.

--- a/.cvsignore
+++ b/.cvsignore
@@ -13,8 +13,10 @@ pcap-savefile.manfile
 pcap.3pcap
 pcap_compile.3pcap
 pcap_datalink.3pcap
+pcap_dump_open.3pcap
 pcap_list_datalinks.3pcap
 pcap_open_dead.3pcap
+pcap_open_offline.3pcap
 stamp-h
 stamp-h.in
 Makefile
