On Linux (and other platforms using the V7 man page conventions), we install man pages in sections 5 and 7, not section 4.
Include the header files installed in /usr/include/pcap.

--- a/packaging/pcap.spec.in
+++ b/packaging/pcap.spec.in
@@ -49,8 +49,10 @@ rm -rf $RPM_BUILD_ROOT
 %doc LICENSE CHANGES INSTALL.txt README.linux TODO VERSION CREDITS packaging/pcap.spec
 /usr/lib/libpcap.a
 /usr/share/man/man3/*
-/usr/share/man/man4/*
+/usr/share/man/man5/*
+/usr/share/man/man7/*
 /usr/include/pcap.h
+/usr/include/pcap/*.h
 /usr/include/pcap-bpf.h
 /usr/include/pcap-namedb.h
 /usr/lib/libpcap.so*
