--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.138.2.22 2008-10-24 07:30:18 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.138.2.23 2008-11-18 06:59:40 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.138.2.22 $)
+AC_REVISION($Revision: 1.138.2.23 $)
 AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
@@ -203,10 +203,12 @@ AC_MSG_RESULT(${enable_protochain})
 #
 AC_ARG_WITH(sita, [  --with-sita             include SITA support],
 [
-	AC_DEFINE(SITA,1,[include ACN support])
-	AC_MSG_NOTICE(Enabling SITA ACN support)
-	V_PCAP=sita
-	V_FINDALLDEVS=sita
+	if test ! "x$withval" = "xno" ; then
+		AC_DEFINE(SITA,1,[include ACN support])
+		AC_MSG_NOTICE(Enabling SITA ACN support)
+		V_PCAP=sita
+		V_FINDALLDEVS=sita
+	fi
 ],
 [
 dnl
